added button for generate new sentence

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <section>
     <img src="images/chuck1.png" alt="Chuck head" />
     <h1 class='title'>Word from Chuck for today</h1>
+    <button class='generate'>Generate new !</button>
 </section>
 </body>
 </html>
