--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Word from Chuck</title>
+    <title>Chuck Norris</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
 <section>
-    <img src="images/chuck1.png" alt="Chuck head" />
-    <h1 class='title'>Word from Chuck for today</h1>
-    <button class='generate'>Generate new !</button>
+    <div class="container">
+        <img src="images/chuck1.png" alt="Chuck head" class="content" />
+        <h1 class='title content'>Did <span>you</span> know that <br/><span>Chuck ...</span></h1>
+        <h2 class="joke content">All roads lead to Chuck Norris. And by the transitive property, a roundhouse kick to the face.</h2>
+        <button class='generate'>Generate new !</button>
+    </div>
 </section>
 </body>
 </html>
